<resources>
    <string name="app_name">WineryMobile</string>


    <!--    bottom menu-->

    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_chat">Chat</string>
    <string name="title_message">Pesan</string>
    <string name="title_account">Akun</string>

    <string name="title_upload_foto_doc">
        <u>Upload Foto Dokumen</u>.
    </string>
    <string name="title_upload_foto_selfie">
        <u>Upload Foto Selfie</u>.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>

</resources>
