<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/ic_chat_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/ic_email_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_account" />

</menu>
